--- a/reponsive.css
+++ b/reponsive.css
@@ -12,6 +12,7 @@
         flex-direction: row;
         padding-left: 48px;
         margin-top: 88px;
+        margin-bottom: 239px;
     }
 
     .Totalbill{
