--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ input::-webkit-inner-spin-button {
     background-image: url(Assets/Kacuna.svg);
     background-repeat: no-repeat;
     background-position: top 16px left 17px;
+    position: relative;
 }
 
 .Adamianebi::placeholder{
